first section fully responsive

--- a/css/main.css
+++ b/css/main.css
@@ -90,18 +90,25 @@ p {
 
 .container {
   line-height: 2;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.coffee-icon-container {
-  line-height: 2;
+.center-content {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.split {
+  display: flex;
+  flex-direction: column;
+}
+
+.coffee-icon-container {
+  line-height: 2;
+  text-align: center;
   padding: 2rem 0 2rem 0;
 }
 
@@ -147,4 +154,10 @@ p {
 
 .icons {
   height: 10rem;
+}
+
+@media (min-width: 40em) {
+  .split {
+    flex-direction: row;
+  }
 }
