--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,10 @@ p {
   margin-bottom: 25px;
 }
 
+.left-right-padding-80 {
+  padding: 0 80px 0 80px;
+}
+
 .navigation-toolbar {
   height: 50px;
   background-color: var(--clr-primary-200);
@@ -104,6 +108,10 @@ p {
 .split {
   display: flex;
   flex-direction: column;
+}
+
+.space-evenly {
+  justify-content: space-evenly;
 }
 
 .coffee-icon-container {
@@ -160,4 +168,79 @@ p {
   .split {
     flex-direction: row;
   }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  h3,
+  h4,
+  p {
+    font-size: 1.3rem;
+  }
+}
+
+section {
+  padding: 0 15px 15px 15px;
+}
+
+.branch-overlay {
+  position: relative;
+}
+
+.branch-overlay:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 18%;
+  height: 50%;
+  opacity: 0.1;
+  background-image: url("/img//branch-overlay.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: 80%;
+}
+
+.beans-overlay {
+  position: relative;
+}
+
+.beans-overlay:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 10%;
+  height: 35%;
+  opacity: 0.1;
+  background-image: url("/img//beans-overlay.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: 80%;
+}
+
+.subs-container {
+  height: 25rem;
+}
+
+.spilled-beans-overlay {
+  position: relative;
+}
+
+.spilled-beans-overlay:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80%;
+  opacity: 0.1;
+  background-image: url("/img/spilled-beans.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
 }
